# multi-agent-extraction

./: .gitignore  Dockerfile  README.md  activity.md  docker-compose.yml  flow_config.json  flow_config.template.json  pyproject.toml  requirements.txt  run.sh
data/: .gitkeep
docker/: .env.example  flow_config.json  requirements.txt
src/: run_flow.py
src/models/: __init__.py  flow.py  types.py
src/providers/: __init__.py  azure_ocr.py  gemini_llm.py
src/shared_llm/: __init__.py  execution.py  prompts.py  utils.py
